using System.Collections;
using System.Collections.Generic;
using UnityEngine;

public class CharacterAnimationTags
{

    public const string CHARACTER_MOVEMENT = "Character_Velocity";
    public const string CHARACTER_JUMP = "Character_Jump";
    public const string CHARACTER_WIN = "Character_Win";
    public const string CHARACTER_DEFEAT = "Character_Lose";

}

public class EntityAnimationTags
{
    public const string MUSHROOM_JUMP_COLLISION = "Mushroon_Jump_Collision";
}

public class CharacterTags
{

    public const string CHARACTER_TAG = "Character";

}

public class EntityTags
{
    public const string ENTITY_HIT = "Entity_Hit";
}

public class UtilitiesTags
{

    public const string GROUND_TAG = "Ground";
    public const string MAIN_CAMERA_TAG = "MainCamera";
    public const string UNTAGGED_TAG = "Untagged";

}
